# W65C02SXB

./: .gitignore  .gitmodules
boards/: qrcode.kicad_mod
boards/proto/: .gitignore  fp-lib-table  genproto.py  genrails.py  proto.csv  proto.kicad_dru  proto.kicad_pcb  proto.kicad_pro  proto.kicad_sch  proto.kicad_sym  rails.json  sym-lib-table
boards/proto/proto.pretty/: Prototype Area.kicad_mod  QRCode.kicad_mod  W65C02SXB Prototype Area.kicad_mod
boards/template/: template.kicad_pcb  template.kicad_prl  template.kicad_pro  template.kicad_sch
boards/template/meta/: info.html
common/: cookie.asm  debugger.asm  header.inc  macros.inc  periph.asm  serial.asm
common/devices/: 65c21.inc  65c22.inc  65c51.inc
crcs/: crcs.asm  linkfile
echo/: Makefile  echo.asm  linkfile
hello/: Makefile  hello.asm  linkfile
sxbtools/: Cargo.toml
sxbtools/src/: main.rs
